test/compile_errors/err_if_expr_missing_else_return.w
//! expect-check-fail: if expression requires an else branch unless the then branch diverges

fn f() -> i32:
    if true: 5

fn main:
    let _x = f()
